# gigagei

./: Cargo.toml  Makefile  README.rst  flake.nix  readme.md
.github/workflows/: nix.yml
src/: cli.rs  lib.rs  main.rs  quote.rs
