[package]
name = "gigagei"
version = "0.3.0"
edition = "2018"
description = "random quote fetching console utility"
repository = "https://github.com/q60/gigagei"
license = "Unlicense"
readme = "readme.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
ureq = "3.0.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = {version = "0.16.2", features = ["terminal_size"]}
anyhow = "1.0.97"
owo-colors = "4.2.0"
argh = "0.1.13"
